--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,35 +1,36 @@
-<h1>Sign up</h1>
+<div class="d-flex flex-column align-items-center mt-5">
+  <h1 class="display-4">Sign up</h1>
+  <%= form_with(url: sign_up_path) do |form| %>
 
-<%= form_with(url: sign_up_path) do |form| %>
-  <% if @user.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
+    <div>
+      <%= form.label :email, class:"form-label" %>
+      <%= form.email_field :email, value: @user.email, required: true, autofocus: true, autocomplete: "email", class:"form-control" %>
+    </div>
 
-      <ul>
-        <% @user.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
+    <div>
+      <%= form.label :password, class:"form-label mt-3" %>
+      <%= form.password_field :password, required: true, autocomplete: "new-password", class:"form-control" %>
+    </div>
+
+    <div>
+      <%= form.label :password_confirmation, class:"form-label mt-3" %>
+      <%= form.password_field :password_confirmation, required: true, autocomplete: "new-password", class:"form-control" %>
+    </div>
+
+    <div>
+      <%= form.submit "Sign up", class:"btn btn-primary mt-3" %>
     </div>
   <% end %>
+</div>
 
-  <div>
-    <%= form.label :email, style: "display: block" %>
-    <%= form.email_field :email, value: @user.email, required: true, autofocus: true, autocomplete: "email" %>
-  </div>
+<% if @user.errors.any? %>
+  <div style="color: red">
+    <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
 
-  <div>
-    <%= form.label :password, style: "display: block" %>
-    <%= form.password_field :password, required: true, autocomplete: "new-password" %>
-    <div>12 characters minimum.</div>
-  </div>
-
-  <div>
-    <%= form.label :password_confirmation, style: "display: block" %>
-    <%= form.password_field :password_confirmation, required: true, autocomplete: "new-password" %>
-  </div>
-
-  <div>
-    <%= form.submit "Sign up" %>
+    <ul>
+      <% @user.errors.each do |error| %>
+        <li><%= error.full_message %></li>
+      <% end %>
+    </ul>
   </div>
 <% end %>
