--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
 
 <div class="d-flex justify-content-around">
   <p class="text-xl">Signed as <%= current_user.email %></p>
-  <%= button_to "Log out", Current.session, method: :delete %>
+  <%= button_to "Log out", Current.session, method: :delete, class: "btn btn-link" %>
 </div>
 
 
@@ -30,7 +30,7 @@
           <td><%= c.name %></td>
           <td><%= c.votes_count %></td>
           <td><%= c.votes.exists?(user: current_user) %></td>
-          <td><%= button_to "Vote", votes_path(vote: { candidate_id: c.id }), method: :post %></td>
+          <td><%= button_to "Vote", votes_path(vote: { candidate_id: c.id }), method: :post, class: "btn btn-primary" %></td>
           <td><%= c.office %></td>
           <td><%= c.party.name %></td>
         </tr>
