--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   </head>
 
   <body>
+  <p style="color: green"><%= notice %></p>
+  <p style="color: red"><%= alert %></p>
+
     <%= yield %>
   </body>
 </html>
