Add candidate form to homepage

--- a/app/views/candidates/_form.html.erb
+++ b/app/views/candidates/_form.html.erb
@@ -17,8 +17,8 @@
   </div>
 
   <div>
-    <%= form.label :office, style: "display: block" %>
-    <%= form.text_field :office %>
+    <%= form.label :office_id, style: "display: block" %>
+    <%= form.text_field :office_id %>
   </div>
 
   <div>
