--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,6 @@
   <%= button_to "Log out", Current.session, method: :delete, class: "btn btn-link" %>
 </div>
 
-
 <h1>Candidates</h1>
 
 <table class="table table-striped">
@@ -31,11 +30,24 @@
           <td><%= c.votes_count %></td>
           <td><%= c.votes.exists?(user: current_user) %></td>
           <td><%= button_to "Vote", votes_path(vote: { candidate_id: c.id }), method: :post, class: "btn btn-primary" %></td>
-          <td><%= c.office %></td>
+          <td><%= c.office.name %></td>
           <td><%= c.party.name %></td>
         </tr>
       <% end %>
     <% end %>
-
   </tbody>
 </table>
+
+<%= form_with(model: @candidate, url: candidates_path, class: "d-inline-flex flex-column") do |f| %>
+  <h3>New Candidate</h3>
+  <%= f.label :name, class: "form-label" %>
+  <%= f.text_field :name, class: "form-control" %>
+
+  <%= f.label :office_id, class: "form-label" %>
+  <%= f.select :office_id, @offices.map { |o| [o.name, o.id] }, class: "form-select" %>
+
+  <%= f.label :party_id, class: "form-label" %>
+  <%= f.select :party_id, @parties.map { |p| [p.name, p.id] }, class: "form-select" %>
+
+  <%= f.submit %>
+<% end %>
