--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,6 @@
   <p style="color: green"><%= notice %></p>
   <p style="color: red"><%= alert %></p>
 
-    <%= yield %>
+  <div class="container"><%= yield %></div>
   </body>
 </html>
