--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -2,6 +2,7 @@
 @import "bootstrap/scss/functions";
 
 // 2. Include any default variable overrides here
+@import "variables";
 
 // 3. Include remainder of required Bootstrap stylesheets (including any separate color mode stylesheets)
 @import "bootstrap/scss/variables";
@@ -31,4 +32,4 @@
 // 8. Add additional custom code here
 
 // Bootstrap Icons
-@import 'bootstrap-icons/font/bootstrap-icons';
+@import "bootstrap-icons/font/bootstrap-icons";
