--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,7 +7,7 @@
 
 <h1>Candidates</h1>
 
-<table class="table table-striped">
+<table class="table table-striped border">
   <thead>
     <tr>
       <th>Name</th>
@@ -16,6 +16,9 @@
       <th>Cast Vote</th>
       <th>Office</th>
       <th>Party</th>
+      <% if current_user.admin? %>
+      <th>Delete</th>
+      <% end %>
     </tr>
   </thead>
   <tbody>
@@ -23,15 +26,18 @@
       <tr>
         <td colspan="3">No candidates found</td>
       </tr>
-      <% elsif %>
+    <% elsif %>
       <% @candidates.each do |e| %>
-        <tr>
+        <tr class="">
           <td><%= e.name %></td>
           <td><%= e.votes_count %></td>
           <td><%= e.votes.exists?(user: current_user) %></td>
-          <td><%= button_to "Vote", votes_path(vote: { candidate_id: e.id }), method: :post, class: "btn btn-primary" %></td>
+          <td><%= button_to "Vote", votes_path(vote: { candidate_id: e.id }), method: :post, class: "btn btn-primary btn-sm px-4" %></td>
           <td><%= e.office.name %></td>
           <td><%= e.party.name %></td>
+          <% if current_user.admin? %>
+          <td><%= button_to "Delete", candidate_path(e), method: :delete, class: "btn btn-danger btn-sm" %></td>
+          <% end %>
         </tr>
       <% end %>
     <% end %>
